--- a/src/main/resources/connection.properties
+++ b/src/main/resources/connection.properties
@@ -1,7 +1,10 @@
+# Basic Twitter API connection information
 twitterHost=api.twitter.com
 twitterVersion=1.1/
 
-# The provided bearer token was expired during testing so I created this one
+## The bearer token provided in the documentation was expired 
+## so I created this one
 token=AAAAAAAAAAAAAAAAAAAAAKAvLQEAAAAA4PLGqVvwQd9ibG4%2F%2FUTDiz0ZRQ4%3DCSFJHxfRVdpdSDOPZfy6TKPJszkiVoMaqYysw0C48Ii9wujADA
 
+# Maximum number of tweets to return in a request
 maxTweetCount=10
