--- a/src/main/resources/connection.properties
+++ b/src/main/resources/connection.properties
@@ -4,7 +4,7 @@ twitterVersion=1.1/
 
 ## The bearer token provided in the documentation was expired 
 ## so I created this one
-token=AAAAAAAAAAAAAAAAAAAAAKAvLQEAAAAA4PLGqVvwQd9ibG4%2F%2FUTDiz0ZRQ4%3DCSFJHxfRVdpdSDOPZfy6TKPJszkiVoMaqYysw0C48Ii9wujADA
+token=changeMe
 
 # Maximum number of tweets to return in a request
 maxTweetCount=10
